syntax = "proto3";

package admin.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "redact/v3/redact.proto";

import "pagination/v1/pagination.proto";

import "identity/service/v1/user.proto";

// 用户管理服务
service UserService {
  // 获取用户列表
  rpc List (pagination.PagingRequest) returns (identity.service.v1.ListUserResponse) {
    option (redact.v3.internal_method) = true;
    option (google.api.http) = {
      get: "/admin/v1/users"
    };
  }

  // 获取用户数据
  rpc Get (identity.service.v1.GetUserRequest) returns (identity.service.v1.User) {
    option (redact.v3.internal_method) = true;
    option (google.api.http) = {
      get: "/admin/v1/users/{id}"
      additional_bindings {
        get: "/admin/v1/users/username/{username}"
      }
    };
  }

  // 创建用户
  rpc Create (identity.service.v1.CreateUserRequest) returns (identity.service.v1.User) {
    option (google.api.http) = {
      post: "/admin/v1/users"
      body: "*"
    };
  }

  // 更新用户
  rpc Update (identity.service.v1.UpdateUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/admin/v1/users/{id}"
      body: "*"
    };
  }

  // 删除用户
  rpc Delete (identity.service.v1.DeleteUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/admin/v1/users/{id}"
      additional_bindings {
        delete: "/admin/v1/users/username/{username}"
      }
    };
  }

  // 用户是否存在
  rpc UserExists (identity.service.v1.UserExistsRequest) returns (identity.service.v1.UserExistsResponse) {
    option (google.api.http) = {
      get: "/admin/v1/users:exists"
    };
  }

  // 修改用户密码
  rpc EditUserPassword(identity.service.v1.EditUserPasswordRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/admin/v1/users/{user_id}/password"
      body: "*"
    };
  }
}
