syntax = "proto3";

package identity.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "identity/service/v1/user.proto";

// 用户个人资料服务
service UserProfileService {
  // 获取用户资料
  rpc GetUser (google.protobuf.Empty) returns (identity.service.v1.User) {}

  // 更新用户资料
  rpc UpdateUser (identity.service.v1.UpdateUserRequest) returns (google.protobuf.Empty) {}
}
