syntax = "proto3";

package permission.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";
import "identity/service/v1/types.proto";

// 用户与角色关联关系
message UserRole {
  // 状态
  enum Status {
    STATUS_UNSPECIFIED = 0; // 未指定（API 层默认）

    PENDING = 1;          // 待激活状态
    ACTIVE = 2;           // 激活状态
    DISABLED = 3;         // 禁用状态
    EXPIRED = 4;          // 过期状态
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = { description: "ID" }
  ]; // ID

  optional uint32 user_id = 2 [
    json_name = "userId",
    (gnostic.openapi.v3.property) = { description: "用户ID" }
  ]; // 用户ID

  optional uint32 tenant_id = 3 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = { description: "租户ID" }
  ]; // 租户ID

  optional uint32 role_id = 4 [
    json_name = "roleId",
    (gnostic.openapi.v3.property) = { description: "角色ID" }
  ]; // 角色ID

  optional bool is_primary = 6 [
    json_name = "isPrimary",
    (gnostic.openapi.v3.property) = {description: "是否主角色"}
  ]; // 是否主角色

  optional Status status = 7 [
    (gnostic.openapi.v3.property) = { description: "状态" }
  ]; // 状态

  optional google.protobuf.Timestamp assigned_at = 10 [
    json_name = "assignedAt",
    (gnostic.openapi.v3.property) = { description: "分配时间（UTC）" }
  ]; // 分配时间（UTC）
  optional uint32 assigned_by = 11 [
    json_name = "assignedBy",
    (gnostic.openapi.v3.property) = { description: "分配者用户 ID" }
  ]; // 分配者用户 ID

  optional google.protobuf.Timestamp start_at = 50 [
    json_name = "startAt",
    (gnostic.openapi.v3.property) = {description: "生效时间（UTC）"}
  ];// 生效时间

  optional google.protobuf.Timestamp end_at = 51 [
    json_name = "endAt",
    (gnostic.openapi.v3.property) = {description: "失效时间（UTC）"}
  ];// 失效时间

  optional identity.service.v1.DataScope data_scope = 80 [
    json_name = "dataScope",
    (gnostic.openapi.v3.property) = {description: "数据权限范围"}
  ];// 数据权限范围

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者用户ID"}]; // 创建者用户ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者用户ID"}]; // 更新者用户ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "删除者用户ID"}]; // 删除者用户ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}
